BYO/http/deployment_http.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aspnetapp
  labels:
    app: aspnetapp
spec:
  containers:
  - image: "mcr.microsoft.com/dotnet/samples:aspnetapp"
    name: aspnetapp-image
    ports:
    - containerPort: 80
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: aspnetapp
spec:
  selector:
    app: aspnetapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: aspnetapp
  #type: LoadBalancer

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: mtls-app
#   name: mtls-app
#   namespace: test-infra
# spec:
#   ports:
#   - port: 443
#     protocol: TCP
#     targetPort: 8443
#   selector:
#     app: mtls-app
#   type: LoadBalancer
# ---


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: aspnetapp
#   annotations:
#     kubernetes.io/ingress.class: azure/application-gateway
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         backend:
#           service:
#             name: aspnetapp
#             port:
#               number: 80
#         pathType: Exact
