BYO/http/http_route-https.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: aspnet-route
  #namespace: test-infra
spec:
  parentRefs:
  - name: gateway-01
  hostnames:
  - "aspnet.backend.com"
  rules:
  - backendRefs:
    - name: aspnetapp
      port: 80
